# axiom

./: .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md
.axiom/: config.toml
crates/axiom-core/: Cargo.toml
crates/axiom-core/examples/: test_workspace.rs
crates/axiom-core/src/: commands.rs  error.rs  events.rs  lib.rs  notifications.rs  service.rs  types.rs
crates/axiom-core/src/agents/: conductor.rs  executor.rs  mod.rs  pty_agent.rs  pty_manager.rs
crates/axiom-core/src/commands/: mod.rs
crates/axiom-core/src/commands/slash/: mod.rs  parser.rs  types.rs
crates/axiom-core/src/config/: cli_agents.rs  loader.rs  types.rs  writer.rs
crates/axiom-core/src/llm/: claude.rs  error.rs  message.rs  mod.rs  ollama.rs  openai.rs  provider.rs  registry.rs
crates/axiom-core/src/orchestration/: developer.rs  mod.rs  orchestrator.rs  service.rs  types.rs
crates/axiom-core/src/workspace/: manager.rs  mod.rs  storage.rs  types.rs
crates/axiom-server/: Cargo.toml
crates/axiom-server/src/: lib.rs  main.rs  state.rs
crates/axiom-server/src/routes/: mod.rs
crates/axiom-tui/: Cargo.toml
crates/axiom-tui/src/: app.rs  events.rs  lib.rs  main.rs
crates/axiom-tui/src/panels/: agents.rs  file_tree.rs  input.rs  mod.rs  output.rs
crates/axiom-tui/src/state/: app.rs  focus.rs  input_mode.rs  mod.rs
crates/axiom-tui/src/ui/: layout.rs  mod.rs  model_selector.rs  scroll.rs  settings.rs
scripts/: README.md  run-tui.sh  run-web.sh
src/: clipboard.rs  lib.rs  main.rs  watcher.rs
src/agents/: conductor.rs  executor.rs  mod.rs  pty_agent.rs  pty_manager.rs  types.rs
src/config/: loader.rs  mod.rs  types.rs  writer.rs
src/core/: error.rs  mod.rs
src/events/: mod.rs
src/llm/: claude.rs  error.rs  gemini.rs  message.rs  mod.rs  ollama.rs  provider.rs  registry.rs
src/panels/: agents.rs  chat.rs  file_tree.rs  input.rs  mod.rs  terminal.rs
src/panels/editor/: diff.rs  highlight.rs  mod.rs  selection.rs  undo.rs
src/panels/output/: agent_viewer.rs  file_viewer.rs  mod.rs
src/state/: app.rs  context.rs  focus.rs  input_mode.rs  mod.rs
src/terminal/: mod.rs  pty.rs
src/ui/: layout.rs  markdown.rs  mod.rs  model_selector.rs  render.rs  scroll.rs  settings.rs  theme.rs  workspace_selector.rs
web/: package-lock.json  package.json  tsconfig.tsbuildinfo
web/electron/: main.js  preload.js
web/public/: manifest.json
web/scripts/: test-config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/actions/: agent.ts  files.ts  llm.ts  slash.ts  terminal.ts  workspace.ts
web/src/app/workspace/[id]/: WorkspaceStudio.tsx  page.tsx
web/src/components/: FilePickerModal.tsx  FileTree.tsx  SettingsModal.tsx  SourceModal.tsx  ThemeToggle.tsx
web/src/lib/: fs.ts  types.ts  workspace-config.ts
web/src/lib/agents/: developer.ts  orchestrator.ts  types.ts
web/src/lib/api/: client.ts  hooks.ts  index.ts  types.ts  websocket.ts
web/src/lib/llm/: api.ts
