[package]
name = "axiom-core"
version = "0.1.0"
edition = "2021"
description = "Core backend library for Axiom - UI-agnostic"
authors = ["atyagi"]
license = "MIT"

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }

# Channels (bounded for backpressure)
crossbeam-channel = "0.5"

# PTY
portable-pty = "0.8"

# Terminal emulation
vt100 = "0.15"

# HTTP for LLM providers
ureq = { version = "2.9", features = ["json"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
toml = "0.8"

# Regex for config env var expansion
regex = "1.10"

# Error handling
thiserror = "2.0"

# Paths
dirs = "5.0"

# UUID for workspace IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Concurrency
parking_lot = "0.12"

# File watching
notify = "6.1"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.14"
