[package]
name = "axiom-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for Axiom - Ratatui-based"
authors = ["atyagi"]
license = "MIT"

[dependencies]
# Core backend
axiom-core = { path = "../axiom-core" }

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Syntax highlighting
syntect = "5.2"

# Markdown parsing
pulldown-cmark = "0.10"

# Clipboard
arboard = "3.4"

# Unicode
unicode-width = "0.2"

# Serialization (for config, etc.)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"

# Concurrency (for shared state access)
parking_lot = "0.12"

# Channels
crossbeam-channel = "0.5"

# Utilities
dirs = "5.0"

[dev-dependencies]
pretty_assertions = "1.4"
